remove image, add gitignore

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       <section id="welcomeText">
 
 
-
+<h3>SEE THE WORK!</h3>
+<h4><a href="index.html?cat=thesis">Graduate Thesis projects</a></h4>
+<h4><a href="index.html?cat=senior">Undergrad Senior projects</a></h4>
     
       <h3>UPCOMING</h3>
         <p><strong>May 10 - 12<br> 5PM - 8PM <br>  IDM SHOWCASE AT 370 Jay Street</strong> <br /> Our in person showcase returns on campus! </p>
